--- a/style.css
+++ b/style.css
@@ -90,12 +90,6 @@ body, html {
     margin: 0;
     flex: 1;
   }
-  
-
-
-
-
-
 
   .wrapper {
     margin: 10px auto;
@@ -127,3 +121,6 @@ body, html {
     background: linear-gradient(318.32deg, rgba(163, 177, 198, 0.1) 0%, rgba(163, 177, 198, 0.1) 55%, rgba(163, 177, 198, 0.25) 100%);
   }
   
+  img {
+    width: 300px
+  }
